Fixed interact button on mobile

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ thead:after { /* space after bags in bank */
 /*		CANVAS		*/
 /*					*/
 
-#mobile {
+#interact {
 	height: 10vh;
 	width: 10vh;
 	background-color: var(--alert);
